Stream PURLs from Dependency Track instead of buffering
In production, runFullSync() walks every DT project + component upfront,
accumulates all 19,600+ unique PURLs into a LinkedHashSet, then partitions
into batches of 500 and submits each batch to a fixed thread pool. The pod
heap-OOMs because every batch fans out 500 concurrent orchestrator tasks
(each holding 4 collectors' state, JSONB serialization buffers, REST
client response objects). Total wall-clock is also DT-walk + processing
sequentially, so first metric is fetched only after the full DT walk
completes (~1 minute), and a pod kill mid-sync loses everything.

Streaming refactor
  - Replace the buffered three-phase flow with a single streaming pass.
    Producer (DT-walking thread) submits per-PURL work directly to a
    virtual-thread executor as PURLs arrive; a Semaphore sized to
    syncConfig.concurrency() bounds concurrent in-flight tasks.
  - When all permits are held, the DT walker blocks at acquire(). DT
    pagination naturally throttles to match downstream throughput. No
    bounded queue needed.
  - Cross-project dedup via ConcurrentHashMap.newKeySet() of PackageId —
    ~3MB at 19.6K PURLs, ~15MB at 100K. Skips processing duplicates with
    no API or DB call.
  - Try-with-resources on Executors.newVirtualThreadPerTaskExecutor()
    blocks at close() until every submitted task completes. Replaces the
    manual List<Future>.get() loop and per-batch barrier wait.

Removed (dead with batched flow)
  - The eager Set<PackageId> collectAllPurls() accumulation phase
  - The redundant upfront dao.upsert(pkg.toEntity()) loop —
    MetricsOrchestrator.collectAndStore already does this internally
  - The partition() helper
  - Jdbi + PackageDao constructor deps on PurlSyncService
  - SyncConfig.batchSize, SyncConfig.rateLimitDelayMs, SyncConfig.maxRetries
  - Their counterparts in application.properties + Helm
    values.yaml/configmap.yaml
  - Docs in README and ARCHITECTURE updated to reflect the new f